--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles.css">
     <script src="https://kit.fontawesome.com/e5ecf982c1.js" crossorigin="anonymous"></script>
     <title>Random Quote Machine</title>
     <script src="quotebank.js"></script>
@@ -37,29 +38,6 @@
       document.body.style.backgroundColor = randomColorBank;
     }
     </script>
-    <style>
-    * {
-      font-size: 1.2rem;
-      margin: 20px;
-      text-align: center;
-    }
-    h1, p {
-      color: white;
-    }
-    button {
-      background-color: Transparent;
-      outline: none;
-      border: none;
-      color: green;
-    }
-    button:hover {
-      color: blue;
-      cursor: pointer;
-    }
-    #btncolor1:hover, #btncolor2:hover {
-      font-size: 1.8rem;
-    }
-    </style>
   </head>
   <body>
     <h1>Random Quote Machine</h1>
@@ -70,7 +48,7 @@
           </div>
           <div id="author">
           </div>
-          <div id="allbutton" class="btn-group" role="group">
+          <div id="allbutton" class="btn-group direction" role="group">
             <a href="#" target="_blank" id="tweet-quote"><i id="btncolor1" class="fa fa-twitter fa-lg"></i></a>
             <button id="new-quote" onClick="getQuote()"><i id="btncolor2" class="fa fa-forward fa-lg"></i></button>
           </div>
