--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
   </head>
   <body>
     <h1>Random Quote Machine</h1>
-    <div class="container-fluid">
+    <div class="container-fluid center">
       <wrapper id="quote-box">
-        <div class="card text-center">
+        <div class="card text-center quotebox">
           <div id="text">
           </div>
           <div id="author">
@@ -57,7 +57,7 @@
       <!--<script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>-->
       <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js" integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi" crossorigin="anonymous"></script>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js" integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG" crossorigin="anonymous"></script>
+      <p>By: fajriawansu</p>
     </div>
-    <p>By: fajriawansu</p>
   </body>
 </html>
